# weixin_work

./: .gitignore  README.md  __init__.py  app.py  examples.py  messages.py  pyproject.toml  setup.py  webhook.py
weixin_work/: exceptions.py  webhook.py
