[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "weixin-work"
version = "0.1.0"
description = "Convenient Python client for the WeCom (Weixin Work / 企业微信) messaging API"
requires-python = ">=3.8"
dependencies = ["requests>=2.20"]

[tool.setuptools.packages.find]
include = ["weixin_work*"]
